--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,3 +15,6 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.has-error p{color: red;}
+.has-error input{border: 1px solid red;}
