Adiciona Opção Modal

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,10 @@
 // vue-snotify
 @import "~vue-snotify/styles/material";
 
+// Vodal
+@import "~vodal/common.css";
+@import "~vodal/rotate.css";
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
